--- a/06.Rmd
+++ b/06.Rmd
@@ -158,7 +158,7 @@ mcmc_dens(bb_sim, pars = "pi") +
 neff_ratio(bb_sim, pars = c("pi"))
 ```
 
-- Autocorrelation measures the correlation between pairs of Markov chain values that are one *Lag* “steps” apart 
+- Autocorrelation measures the correlation between pairs of Markov chain values that are *Lag* “steps” apart 
 
 ```{r}
 mcmc_acf(bb_sim, pars = "pi")
