--- a/05_Conjugate_Families.Rmd
+++ b/05_Conjugate_Families.Rmd
@@ -237,12 +237,4 @@ We moved from sample size 1 -> $n$
 
 ### Cohort 2
 
-`r knitr::include_url("https://www.youtube.com/embed/URL")`
-
-<details>
-<summary> Meeting chat log </summary>
-
-```
-LOG
-```
-</details>
+`r knitr::include_url("https://www.youtube.com/embed/DwNDC_QWgag")`
