--- a/18_Non_Normal_Hierarchical.Rmd
+++ b/18_Non_Normal_Hierarchical.Rmd
@@ -22,3 +22,15 @@
 LOG
 ```
 </details>
+
+### Cohort 2
+
+`r knitr::include_url("https://www.youtube.com/embed/URL")`
+
+<details>
+<summary> Meeting chat log </summary>
+
+```
+LOG
+```
+</details>
